# cloudwatch-logs-insights-url-encoder

./: .flake8  .gitignore  LICENSE.txt  pyproject.toml  setup.py
cloudwatch_logs_insights_url_encoder/: __init__.py  encoder.py
